ontol/ontol-compiler/test-cases/error/union/flattened_unit_variant.on
def anonymous ()

def foo (
    rel .anonymous: (
        rel .is?: bar
        rel .is?: baz
    )
)

def bar (rel .'type': 'bar')
def baz ()
